--- a/html/beforelogin/dataanalyst.html
+++ b/html/beforelogin/dataanalyst.html
@@ -14,9 +14,6 @@
     <link rel="stylesheet" href="/css/navbar.css">
     <link rel="stylesheet" href="/css/softwarebeforelog.css">
 
-    <!-- <link rel="stylesheet" href="/css/roadmap.css"> -->
-
-
     <title>NARA</title>
 </head>
 
@@ -24,20 +21,17 @@
     <header class="header" id="header">
         <nav class="nav container">
             <a href="/index.html" class="nav__logo">
-                <h1>NARA </h1>
+                <h1 class="cursor-pointer">NARA </h1>
             </a>
 
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
                     <li class="nav__item">
-                        <a href="/html/aboutUs.html" class="nav__link active-link">About</a>
-                    </li>
-                    <li class="nav__item">
                         <a href="/html/roadmapIntro.html" class="nav__link">Roadmaps</a>
                     </li>
-                    <li class="nav__item">
+                    <!-- <li class="nav__item">
                         <a href="/html/afterlogin/profile.html" class="nav__link">Sign In</a>
-                    </li>
+                    </li> -->
                 </ul>
 
                 <i class="ri-close-line nav__close" id="nav-close"></i>
@@ -49,7 +43,7 @@
         </nav>
     </header>
     <div class="software-page-main">
-        <div class="software-page-test-opener">
+        <!-- <div class="software-page-test-opener">
             <div class="software-page-test-opener-header">
                 <h1> First, take our test now! </h1>
                 <span class="software-page-test-opener-subtitle">
@@ -58,33 +52,25 @@
                 <button class="software-page-test-opener-button"> Test now </button>
             </div>
 
-        </div>
+        </div> -->
         <div class="software-page-title">
-            <h1> Full-stack Developer Roadmap</h1>
-            <h3> </h3>
-            <h3> Full-stack developers learn and master both Front-end and Back-end. Therefore, the roadmap below
-                includes both front-end and back-end paths.
-                <br> But we recommend you check out our <span class="link-word" onclick="changeToSoftware()">Front-end
-                    Developer</span>, and <span class="link-word"> Backend Developer </span> roadmap seperately to get a
-                closer look into each field.
-            </h3>
-            <div class="software-page-title-line"></div>
+            <h1> Data Analyst Roadmap</h1>
+            <!-- <h3> Data Analyst who work in </h3> -->
+            <!-- <h2> But you can also see our roadmaps for <span class="link-word" onclick="changeToSoftware()">Front-end Developer</span>, and <span class="link-word"> Backend Developer </span> here</h2>            <div class="software-page-title-line"></div> -->
         </div>
-        <div class="software-page-content-text">
+        <div class="software-page-content">
+            <iframe width='853' height='480' src='https://coggle.it/diagram/YUqqmwoQt-5JyuLF/t/-/816584cb2cd8f62d18dc3fca856463886349afecddacc844751d05fdc715ba7b' frameborder='0' allowfullscreen></iframe>                <div class="software-page-content-text-top">
 
-            <div class="software-page-content">
-                <iframe width='853' height='480' src='https://coggle.it/diagram/YP5oBJZ6QtsqEKxx/t/full-stack-developer-%E2%9D%A4%EF%B8%8F/11a841cc56101c7380c6ecc4b4f000c3c1b3f4369712728320234f7366d0b7f6' frameborder='0' allowfullscreen></iframe>                <div class="software-page-content-text-top">
-                    <h1> Do not know what you are suitable for yet? </h1>
+            <!-- <div class="software-page-content-text">
+                <div class="software-page-content-text-top">
+                    <h1> Do not know what you are suitable for yet? </h1> 
                     <h1> One more step! </h1>
-                    <!-- <h3> This is the full roadmap to become a full-stack software developer.  -->
-                    <br>
-                    <br>
-                    <span class="sign-up"> Sign up</span> to access your simplified, personalized roadmaps based on your
-                    characteristics, plus our role-play exercise to better enhance your career </h3>
-                </div>
-            </div>
+                    <h2> This is the full roadmap to become a data analyst. 
+                        <br> 
+                        <br>
+                   But  <span class="sign-up">  sign up</span> to access your simplified, personalized roadmaps based on your characteristics, plus our role-play exercise to better enhance your career </h2></div>
+            </div> -->
         </div>
-    </div>
     </div>
 
     <div class="footer">
