--- a/index.html
+++ b/index.html
@@ -23,19 +23,13 @@
     <header class="header" id="header">
         <nav class="nav container">
             <a href="./index.html" class="nav__logo">
-                <h1>NARA </h1>
+                <h1 class="cursor-pointer">NARA </h1>
             </a>
 
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
                     <li class="nav__item">
-                        <a href="/html/aboutUs.html" class="nav__link active-link">About</a>
-                    </li>
-                    <li class="nav__item">
                         <a href="/html/roadmapIntro.html" class="nav__link">Roadmaps</a>
-                    </li>
-                    <li class="nav__item">
-                        <a href="/html/afterlogin/profile.html" class="nav__link">Sign In</a>
                     </li>
                 </ul>
 
@@ -54,19 +48,42 @@
                 <h2> Our roadmaps make STEM more accessible to 23 million Vietnamese who want to work in these fields but face barriers </h2>
                 <a href="/html/roadmapIntro.html"><button class="main-page-button1"> See our roadmaps </button></a>
             </div>
-            <img class="main-page-intro-picture" src="./img/web-dev.png">
+            <img class="main-page-intro-picture" src="./img/blob1.png">
         </div>
         <div class="main-page-second_intro">
             <img class="main-page-second-intro-picture" src="./img/roadmap-two.png">
             <div class="main-page-second-intro-content">
-                <h2> Làm bài trắc nghiệm để tìm roadmap phù hợp - con đường ngắn nhất dẫn đến thành công </h2>
+                <h2> Our first version of NARA aimed at Vietnamese youth aged 16 to 30 including:
+                </h2>
                 <ul>
-                    <li>Suggestion Making </li>
-                    <li>Goal Setting with estimated completion time </li>
-                    <li>Step-by-step problem solving guidance </li>
-                    <li>Personalized motivational feedback delivered visually on Learners’ Profile </li>
+                    <li>High school, undergraduates (esp. frosh and soph) and students in vocational training who are interested in STEM career but do not know their exact fit yet
+                    </li>
+                    <li>Post-graduates who are looking for a change in career to STEM but do not know their exact fit yet  </li>
+                    <li>Anyone who has not been able to find easily accessible sources of information in STEM career due to language limitation </li>
+                    <li>Anyone who is overwhelmed with too many sources of information and needs a one-stop shop that gives a general, clear and concise yet detailed pathway for their intended career </li>
                 </ul>
-                <button class="main-page-button2"> Take your test now </button>
+                <!-- <a href="/html/roadmapIntro.html"> <button class="main-page-button2"> See our roadmaps </button> </a> -->
+            </div>
+        </div>
+        <div class="main-page-third_intro">
+            <div class="main-page-third-intro-content">
+                <h2 class="cl-white ta-center"> VieSign's Goals:</h2>
+                <div class="roadmap-page-title-line"></div>
+                <div class="goal-box">
+                    <div class="goal goal-1">
+                        follow free roadmaps for STEM subjects to give a bird’s-eye view on Web Development and Data Analysis careers
+                    </div>
+                    <div class="goal goal-1">
+                        Understand basic terminologies in Web Development/ Data Science 
+                    </div>
+                    <div class="goal goal-1">
+                        Know where to look for more information to dig deeper
+                    </div>
+                    <div class="goal goal-1">
+                        Find a community for support and exchange  
+                    </div>
+                </div>
+                <!-- <a href="/html/roadmapIntro.html"> <button class="main-page-button2"> See our roadmaps </button> </a> -->
             </div>
         </div>
     </div>
