--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -30,9 +30,9 @@
                     <li class="nav__item">
                         <a href="./roadmapIntro.html" class="nav__link">Roadmaps</a>
                     </li>
-                    <li class="nav__item">
+                    <!-- <li class="nav__item">
                         <a href="./afterlogin/profile.html" class="nav__link">Sign In</a>
-                    </li>
+                    </li> -->
                 </ul>
 
                 <i class="ri-close-line nav__close" id="nav-close"></i>
