--- a/html/beforelogin/backend.html
+++ b/html/beforelogin/backend.html
@@ -24,20 +24,17 @@
     <header class="header" id="header">
         <nav class="nav container">
             <a href="/index.html" class="nav__logo">
-                <h1>NARA </h1>
+                <h1 class="cursor-pointer">NARA </h1>
             </a>
 
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
                     <li class="nav__item">
-                        <a href="/html/aboutUs.html" class="nav__link active-link">About</a>
-                    </li>
-                    <li class="nav__item">
                         <a href="/html/roadmapIntro.html" class="nav__link">Roadmaps</a>
                     </li>
-                    <li class="nav__item">
+                    <!-- <li class="nav__item">
                         <a href="/html/afterlogin/profile.html" class="nav__link">Sign In</a>
-                    </li>
+                    </li> -->
                 </ul>
                 <i class="ri-close-line nav__close" id="nav-close"></i>
             </div>
@@ -48,7 +45,7 @@
         </nav>
     </header>
     <div class="software-page-main">
-        <div class="software-page-test-opener">
+        <!-- <div class="software-page-test-opener">
             <div class="software-page-test-opener-header">
                 <h1> First, take our test now! </h1>
                 <span class="software-page-test-opener-subtitle">
@@ -57,20 +54,22 @@
                 <button class="software-page-test-opener-button"> Test now </button>
             </div>
 
-        </div>
+        </div> -->
         <div class="software-page-title">
             <h1> Backend Developer Roadmap</h1>
-            <h3> backend Software Developer who work in Back-end of software. </h3>
-            <h3> But you can also see our roadmaps for <span class="link-word" onclick="changeToFullstack()">Fullstack Developer</span>, and <span class="link-word"> Front-end Developer </span> here</h3>           
+            <!-- <h3> backend Software Developer who work in Back-end of software. </h3> -->
+            <h3> You can also see our roadmaps for <span class="link-word" onclick="changeToFullstack()">Fullstack Developer</span>, and <span class="link-word"> Front-end Developer </span> here</h3>           
             <div class="software-page-title-line"></div>
         </div>
         <div class="software-page-content">
-            <iframe width="600" height="400" frameborder="0"
+            <!-- <iframe width="600" height="400" frameborder="0"
             src="https://www.mindmeister.com/maps/public_map_shell/1969654513/full-stack-developer?width=600&height=400&z=auto&t=WgWSOxihlM"
             scrolling="no" style="overflow: hidden; margin-bottom: 5px;">Your browser is not able to display frames.
             Please visit <a href="https://www.mindmeister.com/1969654513/full-stack-developer?t=WgWSOxihlM"
-                target="_blank">Full-Stack Developer</a> on MindMeister.</iframe>
-            <div class="software-page-content-text">
+                target="_blank">Full-Stack Developer</a> on MindMeister.</iframe> -->
+                <iframe width='853' height='480' src='https://coggle.it/diagram/YUqg-GWJetFsTrQx/t/-/bac0a00153c361f59a39a5683ed7c61cdf13f6483c9349feb41bb6a993b28876' frameborder='0' allowfullscreen></iframe>                <div class="software-page-content-text-top">
+
+            <!-- <div class="software-page-content-text">
                 <div class="software-page-content-text-top"> 
                     <h1> Do not know what you are suitable for yet? </h1>
                     <h1> One more step! </h1>
@@ -78,7 +77,7 @@
                         <br> 
                         <br>
                    But  <span class="sign-up">  sign up</span> to access your simplified, personalized roadmaps based on your characteristics, plus our role-play exercise to better enhance your career </h2></div>
-            </div>
+            </div> -->
         </div>
     </div>
 
