--- a/html/beforelogin/fullstack.html
+++ b/html/beforelogin/fullstack.html
@@ -24,20 +24,17 @@
     <header class="header" id="header">
         <nav class="nav container">
             <a href="/index.html" class="nav__logo">
-                <h1>NARA </h1>
+                <h1 class="cursor-pointer">NARA </h1>
             </a>
 
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
                     <li class="nav__item">
-                        <a href="/html/aboutUs.html" class="nav__link active-link">About</a>
-                    </li>
-                    <li class="nav__item">
                         <a href="/html/roadmapIntro.html" class="nav__link">Roadmaps</a>
                     </li>
-                    <li class="nav__item">
+                    <!-- <li class="nav__item">
                         <a href="/html/afterlogin/profile.html" class="nav__link">Sign In</a>
-                    </li>
+                    </li> -->
                 </ul>
 
                 <i class="ri-close-line nav__close" id="nav-close"></i>
@@ -49,7 +46,7 @@
         </nav>
     </header>
     <div class="software-page-main">
-        <div class="software-page-test-opener">
+        <!-- <div class="software-page-test-opener">
             <div class="software-page-test-opener-header">
                 <h1> First, take our test now! </h1>
                 <span class="software-page-test-opener-subtitle">
@@ -58,28 +55,31 @@
                 <button class="software-page-test-opener-button"> Test now </button>
             </div>
 
-        </div>
+        </div> -->
         <div class="software-page-title">
-            <h1> Front-end Developer Roadmap</h1>
-            <h3> Front-end Developers are people who love designing, creating, and are dedicated to bring the best
-                experience to software clients/users</h3>
-            <h3> You can also see our roadmaps for <span class="link-word" onclick="changeToSoftware()">Full-stack
-                    Developer</span>, and <span class="link-word"> Backend Developer </span> here</h3>
+            <h1> Full-stack Developer Roadmap</h1>
+            <h3> Full-stack developers learn and master both Front-end and Back-end. Therefore, the roadmap below
+                includes both front-end and back-end paths.
+                <br><br> But we recommend you check out our <span class="link-word" onclick="changeToSoftware()">Front-end
+                    Developer</span>, and <span class="link-word"> Backend Developer </span> roadmap seperately to get a
+                closer look into each field.
+            </h3>
+            <div class="software-page-title-line"></div>
         </div>
-        <div class="software-page-content">
-                    <iframe width='853' height='480' src='https://embed.coggle.it/diagram/YP7F_pZ6QgclLSf5/56b7157db74dcd64b95ccfd3eb085e86cc563331f45ca2cbf4c5bdb7c9421328' frameborder='0' allowfullscreen></iframe>
-            <div class="software-page-content-text">
-                <div class="software-page-content-text-top">
+        <div class="software-page-content-text">
+
+            <div class="software-page-content">
+                <iframe width='853' height='480' src='https://coggle.it/diagram/YP5oBJZ6QtsqEKxx/t/full-stack-developer-%E2%9D%A4%EF%B8%8F/11a841cc56101c7380c6ecc4b4f000c3c1b3f4369712728320234f7366d0b7f6' frameborder='0' allowfullscreen></iframe>                <div class="software-page-content-text-top">
+                    <!-- <h1> Do not know what you are suitable for yet? </h1>
                     <h1> One more step! </h1>
-                    <h2> This is the full roadmap to become a full-stack software developer.
-                        <br>
-                        <br>
-                        But <span class="sign-up"> sign up</span> to access your simplified, personalized roadmaps based
-                        on your characteristics, plus our role-play exercise to better enhance your career
-                    </h2>
+                    <br>
+                    <br>
+                    <span class="sign-up"> Sign up</span> to access your simplified, personalized roadmaps based on your
+                    characteristics, plus our role-play exercise to better enhance your career </h3> -->
                 </div>
             </div>
         </div>
+    </div>
     </div>
 
     <div class="footer">
