--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
         <div class="main-page-third_intro">
             <div class="main-page-third-intro-content">
-                <h2 class="cl-white ta-center"> VieSign's Goals:</h2>
+                <h2 class="cl-white ta-center"> NARA's Goals:</h2>
                 <div class="roadmap-page-title-line"></div>
                 <div class="goal-box">
                     <div class="goal goal-1">
