--- a/index.html
+++ b/index.html
@@ -93,13 +93,19 @@
             <h2>Contact Us</h2>
             <p>Do not forget to contact us if you have any questions </p>
             <ul class="social-media">
-                <li><a href="http://facebook.com"><i class="fab fa-facebook"></i></a></li>
+                <li class="mr-10px"><a href="#"><i class="fas fa-envelope"></i></a></li>
+                <p>vuhachau2412@gmail.com </p>
+            </ul>
+            <ul class="social-media">
+                <li class="mr-10px"><a href="#"><i class="fas fa-phone"></i></a></li>
+                <p>(+84) 868914296 (Ms. Ha Chau Vu) </p>
+            </ul>
+                            <!-- <li><a href="http://facebook.com"><i class="fab fa-facebook"></i></a></li>
                 <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                 <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="#"><i class="fab fa-youtube"></i></i></a></li>
-            </ul>
+                <li><a href="#"><i class="fab fa-youtube"></i></i></a></li> -->
         </div>
-        <form class="footer-bottom" action="vuhachau2412@email.com" method="POST">
+        <!-- <form class="footer-bottom" action="vuhachau2412@email.com" method="POST">
             <div class="form-info">
                 <div class="form-email">
                     <h2> Email </h2>
@@ -115,7 +121,7 @@
             </div>
             <button class="footer-form-button" type="submit">Send</button>
 
-        </form>
+        </form> -->
     </div>
     <!--=============== SCROLL REVEAL===============-->
     <script src="./js/scrollreveal.js"></script>
